--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,45 @@
+absl-py==0.8.1
+cachetools==3.1.1
+certifi==2019.9.11
+chardet==3.0.4
 cloudpickle==1.2.2
 cycler==0.10.0
 future==0.18.1
+google-auth==1.7.1
+google-auth-oauthlib==0.4.1
+grpcio==1.25.0
 gym==0.15.3
 gym-minigrid==0.0.5
+idna==2.8
 kiwisolver==1.1.0
+Markdown==3.1.1
 matplotlib==3.1.1
 numpy==1.17.3
+oauthlib==3.1.0
 pandas==0.25.2
 Pillow==6.2.1
 pkg-resources==0.0.0
+protobuf==3.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
 pyglet==1.3.2
 pyparsing==2.4.2
 PyQt5==5.13.1
 PyQt5-sip==12.7.0
 python-dateutil==2.8.0
+pytorch-ignite==0.2.1
 pytz==2019.3
+requests==2.22.0
+requests-oauthlib==1.3.0
+rsa==4.0
 scipy==1.3.1
 seaborn==0.9.0
 six==1.12.0
 snakeviz==2.0.1
+tensorboard==2.0.1
 torch==1.3.0
 torchvision==0.4.1
 tornado==6.0.3
+urllib3==1.25.7
+Werkzeug==0.16.0
+wrapt==1.11.2
